--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,6 @@
+
+@import "bootstrap";
+@import "layouts";
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
