--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,14 @@
-<header class="navbar navdar-expand-lg navbar-light bg-light fixed-top">
-    <%= link_to 'TODO App', root_path, class: "navbar-brand" %>
-    <button
+<header class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <%= link_to 'TODO App', root_path, class: "navbar-brand" %>
+  <button
     class="navbar-toggler"
     type="button"
     data-toggle="collapse"
     data-target="#navbarSupportedContent"
-    aeia-controls="navbarSupportedConten"
+    aria-controls="navbarSupportedContent"
     aria-expanded="false"
     aria-label="Toggle navigation"
-    >
-     <span class="navbar-toggler-icon"></span>
-    </button>
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
 </header>
